chore: refatorando a forma de definir as poltronas de uma sala