@@ -1,15 +1,23 @@
 package poltrona.service;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import poltrona.dto.poltrona.PoltronaRequestDTO;
 import poltrona.dto.poltrona.PoltronaResponseDTO;
 import poltrona.dto.poltrona.TipoPoltronaRequestDTO;
+import poltrona.entity.Cinema;
 import poltrona.entity.Poltrona;
 import poltrona.entity.Sala;
+import poltrona.entity.Usuario;
+import poltrona.enums.ingresso.StatusIngresso;
+import poltrona.exception.RegraNegocioException;
 import poltrona.exception.ResourceNotFoundException;
 import poltrona.mapper.PoltronaMapper;
+import poltrona.repository.IngressoRepository;
 import poltrona.repository.PoltronaRepository;
 
 @Service
@@ -17,34 +25,36 @@ public class PoltronaService {
 
     private final PoltronaRepository poltronaRepository;
     private final PoltronaMapper poltronaMapper;
+    private final IngressoRepository ingressoRepository;
+    private final UsuarioService usuarioService;
 
-    public PoltronaService(PoltronaRepository poltronaRepository, PoltronaMapper poltronaMapper) {
+    public PoltronaService(PoltronaRepository poltronaRepository, PoltronaMapper poltronaMapper,
+            IngressoRepository ingressoRepository, UsuarioService usuarioService) {
         this.poltronaRepository = poltronaRepository;
         this.poltronaMapper = poltronaMapper;
+        this.ingressoRepository = ingressoRepository;
+        this.usuarioService = usuarioService;
     }
 
-    public List<PoltronaResponseDTO> cadastrar(Integer fileiras, Integer poltronasPorFileira, Sala sala) {
+    @Transactional
+    public List<PoltronaResponseDTO> cadastrar(PoltronaRequestDTO dto, Sala sala) {
 
         List<Poltrona> poltronas = new ArrayList<>();
 
-        for (int i = 0; i <= fileiras; i++) {
+        dto.fileiras().forEach((letra, quantidade) -> {
+            char letraChar = letra.charAt(0);
 
-            for (int j = 1; j <= poltronasPorFileira; j++) {
-
-                char letra = (char) ('A' + i);
-
-                Poltrona poltrona = new Poltrona(letra, j, sala);
-
-                Poltrona poltronaSalva = poltronaRepository.save(poltrona);
-
-                poltronas.add(poltronaSalva);
-
+            for (int numero = 1; numero <= quantidade; numero++) {
+                Poltrona poltrona = new Poltrona(letraChar, numero, sala);
+                poltronas.add(poltrona);
             }
+        });
 
-        }
+        List<Poltrona> poltronasSalvas = poltronaRepository.saveAll(poltronas);
 
-        return poltronas.stream().map(poltronaMapper::toDTO).collect(Collectors.toList());
-
+        return poltronasSalvas.stream()
+                .map(poltronaMapper::toDTO)
+                .toList();
     }
 
     public PoltronaResponseDTO buscarPorId(Long id) {
@@ -56,16 +66,73 @@ public class PoltronaService {
 
     }
 
+    @Transactional
     public PoltronaResponseDTO atualizarTipo(Long id, TipoPoltronaRequestDTO tipo) {
+
+        Usuario usuarioLogado = usuarioService.usuarioLogado();
 
         Poltrona poltrona = poltronaRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Poltrona não encontrada"));
+
+        Cinema cinema = poltrona.getSala().getCinema();
+        if (!cinema.getProprietario().getId().equals(usuarioLogado.getId())) {
+            throw new AccessDeniedException("Você não tem permissão para alterar poltronas deste cinema.");
+        }
+
+        if (poltrona.getTipo() == tipo.tipo()) {
+            throw new RegraNegocioException("A poltrona já está cadastrada com este tipo.");
+        }
+
+        boolean possuiIngressoFuturo = ingressoRepository
+                .existsByPoltronaIdAndSessaoDataHoraInicioAfterAndStatus(
+                        id,
+                        LocalDateTime.now(),
+                        StatusIngresso.ATIVO);
+
+        if (possuiIngressoFuturo) {
+            throw new RegraNegocioException(
+                    "Esta poltrona possui ingressos vendidos para sessões futuras e não pode ter seu tipo alterado.");
+        }
 
         poltrona.atualizarTipo(tipo.tipo());
 
         Poltrona salva = poltronaRepository.save(poltrona);
 
         return poltronaMapper.toDTO(salva);
+    }
+
+    @Transactional
+    public void desativar(Long id) {
+
+        Usuario usuarioLogado = usuarioService.usuarioLogado();
+
+        Poltrona poltrona = poltronaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Poltrona não encontrada de id " + id));
+
+        Cinema cinema = poltrona.getSala().getCinema();
+
+        if (!cinema.getProprietario().getId().equals(usuarioLogado.getId())) {
+            throw new AccessDeniedException("Você não tem permissão para alterar poltronas deste cinema.");
+        }
+
+        if (poltrona.getAtiva() == false) {
+            throw new RegraNegocioException("Esta poltrona já está inativa, id: " + id);
+        }
+
+        boolean possuiIngressoFuturo = ingressoRepository
+                .existsByPoltronaIdAndSessaoDataHoraInicioAfterAndStatus(
+                        id,
+                        LocalDateTime.now(),
+                        StatusIngresso.ATIVO);
+
+        if (possuiIngressoFuturo) {
+            throw new RegraNegocioException(
+                    "Esta poltrona possui ingressos vendidos para sessões futuras e não pode ter seu tipo alterado.");
+        }
+
+        poltrona.desativar();
+
+        poltronaRepository.save(poltrona);
 
     }
 
